# email-send-mcp

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py  mcp_server.py
src/email_service/: config.py  fastmcp_client.py  load_env.py  sender.py  utils.py
src/tests/: test_sender.py
